--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 :root {
-  --background: #00ff00;
+  --background: #ffffff;
   --foreground: #171717;
 }
 
@@ -14,7 +14,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #00ff00;
+    --background: #0a0a0a;
     --foreground: #ededed;
   }
 }
@@ -25,6 +25,3 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-* {
-  color: red !important;
-}
